--- a/web/templates/masterLayout.xhtml
+++ b/web/templates/masterLayout.xhtml
@@ -13,7 +13,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <h:outputStylesheet library="css" name="bootstrap.css" />
     </h:head>
-    <h:body>
+    <h:body style="padding-top: 70px">
 
         <ui:insert name="heading" />    
 
