--- a/web/templates/login/header.xhtml
+++ b/web/templates/login/header.xhtml
@@ -19,7 +19,7 @@
                         </h:form>
                     </div>
                     
-                    <div class="collapse navbar-collapse">
+                    <div >
                         <ul class="nav navbar-nav navbar-right">
                             <h:form>
                                 <li style="float: left; position: relative; display: block;"><h:commandLink style="padding-top: 15px; padding-bottom: 15px; padding-right: 15px; padding-left: 15px; 
